[metadata]
name = zzztest
summary = Package for testing
license = Apache-2
author = cglewis
author_email = clewis@iqt.org
home_page = https://github.com/IQTLabs/zzz
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[entry_points]
console_scripts =
    zzztest = zzztest.__main__:main
